--- a/papers/DFT/DFT.tex
+++ b/papers/DFT/DFT.tex
@@ -1,4 +1,4 @@
-\chapter{Density Functional Theory \label{sec:DFT}}
+\chapter{Density Functional Theory \label{ch:DFT}}
 Many of the physics in condensed matter originates from the behavior of electrons inside materials, i.e. the electronic structure, which can be studied quantitatively in two ways.
 \\\\
 The first is to formulate an analytical model whose parameters are subsequently fitted to experimental observations. 
@@ -84,4 +84,4 @@ There we saw that the parameters of these models can be fitted from experimental
 
 However, one may wonder if, instead of using angle resolved photoemission experiments as an input for the model, the results of a DFT calculation could be employed.
 The DFT calculation would then act as a ``numerical experiment'', and the Tight-Binding model as a way to rationalize the behavior.
-The required bridge connecting the two can be formed by the Wannier functions and Wannierization, discussed in Appendix~\ref{sec:Wannier}. 
+The required bridge connecting the two can be formed by the Wannier functions and Wannierization, discussed in Appendix~\ref{ch:Wannier}. 
