--- a/papers/FEM/FEM.tex
+++ b/papers/FEM/FEM.tex
@@ -1,5 +1,5 @@
-\chapter{Phase Field Modeling with the Finite Elements Method \label{ch:Softening}}
-We give a short introduction into the methods we used in order to simulate phase field models such as the one in Chapter~\ref{ch:BTO}.
+\chapter{Phase Field Modeling with the Finite Elements Method \label{ch:FEM}}
+We give a short introduction into the methods we used in order to simulate phase field models such as the one defined in Chapter~\ref{ch:Softening}, Eq.~\ref{eq:BTO_energy}.
 The Finite Element Method constitutes a big part in these simulations, thus, in light of making this Thesis relatively self-contained, we give a short summary of the topic, based on Ref.~\cite{Biner}.
 \begin{figure}
 	\IncludeGraphics{fem}
