--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -135,13 +135,13 @@ Now that the stage is set, we continue with a description of the puzzling experi
 \begin{figure}
     \centering
     \IncludeGraphics[width=\textwidth]{fig_exp2.png}
-\caption{ \label{fig:GdMn2O5_experiment1} {\bf Experimental measurements of the ferroelectric polarization at 2.3 K.} a) Magnetic field applied at 1$^\circ$ which leads to a two state hysteresis loop. The left panel shows the result of our measurements, whereas the right one shows the previous measurements of Ref.~\cite{Lee13}. This behavior on the right panel is identical to our theoretical results (see Sec.~\ref{sec:GdMn2O5_results_discussion}). b) Magnetic field applied at 9$^\circ$, where the four state hysteresis loop appears. c) Field applied at 15$^\circ$, again leading to a two state hysteresis loop.  
+\caption{ \label{fig:GdMn2O5_experiment1} {\bf Experimental measurements of the ferroelectric polarization at 2.3 K.} a) Magnetic field applied at 1$^\circ$ which leads to a two-state hysteresis loop. The left panel shows the result of our measurements, whereas the right one shows the previous measurements of Ref.~\cite{Lee13}. This behavior on the right panel is identical to our theoretical results (see Sec.~\ref{sec:GdMn2O5_results_discussion}). b) Magnetic field applied at 9$^\circ$, where the four-state hysteresis loop appears. c) Field applied at 15$^\circ$, again leading to a two-state hysteresis loop.  
 In these plots, we have denoted the four discussed states by the labels 1-4. The arrows and graph color denote the direction of magnetic field-change during the sweep, as indicated by the inset of the left graph of panel (a).}
 \end{figure}
 \begin{figure}
     \centering
     \IncludeGraphics{exp_plusvsminus.png}
-\caption{ \label{fig:GdMn2O5_experiment2} {\bf Angle and temperature dependence of the four state switching.} By comparing panels (a) and (b) we can see that changing the sign of the field angle $\phi_H$ does not influence the four state switching. c) Temperature dependence of the hysteresis loop at the magic angle. Above 4 K (upper panel) the more usual two state hysteresis loop is observed, whereas below 4 K (lower panel) the four state behavior starts to arise. The states, colors and arrows are indicated in the same way as in Fig.~\ref{fig:GdMn2O5_experiment1}.}
+\caption{ \label{fig:GdMn2O5_experiment2} {\bf Angle and temperature dependence of the four-state switching.} By comparing panels (a) and (b) we can see that changing the sign of the field angle $\phi_H$ does not influence the four-state switching. c) Temperature dependence of the hysteresis loop at the magic angle. Above 4 K (upper panel) the more usual two-state hysteresis loop is observed, whereas below 4 K (lower panel) the four-state behavior starts to arise. The states, colors and arrows are indicated in the same way as in Fig.~\ref{fig:GdMn2O5_experiment1}.}
 \end{figure}
 
 The measurements we present in this Section were performed in the group of A. Pimenov, on single crystal GdMn$_2$O$_5$ samples grown by S.-W. Cheong's group.
@@ -153,12 +153,12 @@ In previous experimental measurements, the magnetic field was only applied along
 In the following we will refer to three distinct switching regimes: the low angle, ``magic'' angle, and high angle regime.
 They correspond to the values of $\phi_H$ shown in panels (a), (b), and (c) of Fig.~\ref{fig:GdMn2O5_experiment1}, respectively.
 Before delving into a detailed analysis of the experiments, we would like to point out that the low angle behavior shown in left side of panel (a) does not coincide with the behavior found in previous experiments in Ref.~\cite{Lee13} on the same sample, shown on the right.
-There it was found that when the field is applied along the $a$-axis, a two state switching with a reversal of the polarization is observed, similar to the 1--4 branch in panel (b) of Fig.~\ref{fig:GdMn2O5_experiment1}.
+There it was found that when the field is applied along the $a$-axis, a two-state switching with a reversal of the polarization is observed, similar to the 1--4 branch in panel (b) of Fig.~\ref{fig:GdMn2O5_experiment1}.
 We are not quite sure what leads to this discrepancy between the measurements. It could be related to the poling history of the sample or some domain related behavior.
 This discrepancy is not that important in light of the current discussion, but it is nonetheless at odds with our theoretical findings which demonstrate a behavior similar to the previous measurements in Ref.~\cite{Lee13}. 
 \\\\
 Turning back to the results shown in Fig.~\ref{fig:GdMn2O5_experiment1}, we can observe that the switching behavior changes significantly with $\phi_H$.
-In the high angle case, showcased in panel (c), we can observe a two state switching loop, in which $P_b$ does not vary much but a clear jump appears around a field magnitude of 5 T.
+In the high angle case, showcased in panel (c), we can observe a two-state switching loop, in which $P_b$ does not vary much but a clear jump appears around a field magnitude of 5 T.
 This signals a sudden change in the magnetic configuration of the system, since $P_b$ is a direct result of it.
 The most peculiar, and completely novel, behavior can be found around the magic angle $\phi_H \sim 9^\circ$ in panel (b) of Fig.~\ref{fig:GdMn2O5_experiment1}.
 During the up-down-up-down field sweeps, we find that four different states are visited sequentially in this switching regime, with four different values of $P_b$.
@@ -168,22 +168,22 @@ At this stage, we would like to draw the attention of the reader to two facts.
 First, compared to the usual magnetoelectric switching with one low field state and one high field state, here a single up--down cycle of the field reverses the polarization, and correspondingly leads to a different final state.
 In order to return the system to its original configuration another up--down cycle is required.
 
-Second, this four state loop is fully deterministic, meaning that when multiple such double cycles are applied, the system tracks close to exactly the same $P_b$ loop every time.
+Second, this four-state loop is fully deterministic, meaning that when multiple such double cycles are applied, the system tracks close to exactly the same $P_b$ loop every time.
 \\\\
-If we ignore for a brief moment the low-angle behavior displayed in the left panel of Fig.~\ref{fig:GdMn2O5_experiment1}(a), and replace it with the behavior on the right~\cite{Lee13}, i.e. following the 1--4 branch in panel (b), we can imagine the four state switching as an interpolation between the high and low angle switching regimes.
+If we ignore for a brief moment the low-angle behavior displayed in the left panel of Fig.~\ref{fig:GdMn2O5_experiment1}(a), and replace it with the behavior on the right~\cite{Lee13}, i.e. following the 1--4 branch in panel (b), we can imagine the four-state switching as an interpolation between the high and low angle switching regimes.
 This is a very important observation and will lead to one of the main results of this work: the topological nature of the magnetoelectric switching in this material.
 \\\\
-Turning now to the measurements displayed in Fig.~\ref{fig:GdMn2O5_experiment2}, we find that the four state loop is not affected by a sign change of $\phi_H$ (compare panels (a,b)).
-From the two panels in (c), displaying measurements at 15 K and 4 K with $\phi_H$ along the magic angle, we can observe that the four state hysteresis loop only appears at low temperatures.
-For higher temperatures a more usual two state loop is found, similar to the high angle loop in panel (c) of Fig.~\ref{fig:GdMn2O5_experiment1}.
+Turning now to the measurements displayed in Fig.~\ref{fig:GdMn2O5_experiment2}, we find that the four-state loop is not affected by a sign change of $\phi_H$ (compare panels (a,b)).
+From the two panels in (c), displaying measurements at 15 K and 4 K with $\phi_H$ along the magic angle, we can observe that the four-state hysteresis loop only appears at low temperatures.
+For higher temperatures a more usual two-state loop is found, similar to the high angle loop in panel (c) of Fig.~\ref{fig:GdMn2O5_experiment1}.
 \\\\
 To conclude this Section, we would like to point out that we focus on the overall switching behavior, i.e. we ignore the details that can be found by careful study of the $P_b$ graphs.
 For example, in Fig.~\ref{fig:GdMn2O5_experiment1}(b) one can observe three distinct steps that appear around 5 T during the 1$\rightarrow$2 and 3$\rightarrow$4 switching.
 These steps are, however, absent at the same field magnitude, when the system is on the 2$\rightarrow$3 and 4$\rightarrow$1 branch.
 %to a transition, on an ionic level, to states with higher Gd spin, or it might be related
 Their origin might be related to the spins in the Mn chains rotating individually, rather than in unison as we will assume in our model.
-Further research is required to solidify this statement, here we rather choose to focus on unraveling the main behavior of the four state loop flanked in $\phi_H$ parameter-space by two more usual two state switching loops.
-% This novel four state switching is the focus of this Chapter, and is found to originate from a unidirectional rotational motion of the spins, a sort of microscopic magnetic analogue to the crankshaft in a car, converting the linear back--and--forth variation of the magnetic field into spin rotations.
+Further research is required to solidify this statement, here we rather choose to focus on unraveling the main behavior of the four-state loop flanked in $\phi_H$ parameter-space by two more usual two-state switching loops.
+% This novel four-state switching is the focus of this Chapter, and is found to originate from a unidirectional rotational motion of the spins, a sort of microscopic magnetic analogue to the crankshaft in a car, converting the linear back--and--forth variation of the magnetic field into spin rotations.
 
 \section{Theory \label{sec:GdMn2O5_Theory}}
 In order to describe the puzzling experimental observations we construct a semi-classical model with eight Gd spins denoting the eight sublattice magnetizations, and two AFM order parameters that describe the Mn chains.
@@ -379,7 +379,7 @@ We now turn to a discussion of the results obtained from these simulations of th
     \IncludeGraphics{Pb_3panels}
     \caption{\label{fig:GdMn2O5_theory}{\bf Simulation of the angle dependent magnetoelectric switching.}
     The evolution of ferroelectric polarization $P_b$ during the magnetic field sweep cycle is depicted for the low (a), magic (b), and high (c) angle regimes. 
-   In each panel, the four states and field cycle progression are marked in the same way as in Fig~\ref{fig:GdMn2O5_experiment1}. The four states hysteresis loop is observed for the field at the magic orientation in panel (b). 
+   In each panel, the four-states and field cycle progression are marked in the same way as in Fig~\ref{fig:GdMn2O5_experiment1}. The four-states hysteresis loop is observed for the field at the magic orientation in panel (b). 
     The insets indicate the sequence of states visited during the cycle for each regime, and winding numbers (see Section~\ref{sec:GdMn2O5_topology} for further details on the latter).
 }
 \end{figure}
@@ -425,7 +425,7 @@ The other half is related to the first by time-reversal symmetry as indicated by
 A similar trajectory through this valley on the right hand side of the energy surface would be followed if the initial state was in one of the two zero field minima it harbors. 
 We can thus conclude that the up--down cycling of the magnetic field at $\phi_H=10^\circ$ does not allow for a transition between the two valleys, and $\phi_{L_2}$ changes very little during the cycling process.
 \\\\
-From these considerations, it seems that no such unidirectional trajectory is followed in the two state regimes (Fig.\ref{fig:GdMn2O5_theory}(a, c)) at low or high field angle $\phi_H$.
+From these considerations, it seems that no such unidirectional trajectory is followed in the two-state regimes (Fig.\ref{fig:GdMn2O5_theory}(a, c)) at low or high field angle $\phi_H$.
 This is rather puzzling since one would imagine that the minima behave in a similar way as in Fig.~\ref{fig:GdMn2O5_heatmap}, since they are required to obey the same symmetries.
 
 In fact, they do.
@@ -485,12 +485,12 @@ Indeed, starting at state 2, when $H<H^*$ as the field decreases, this leads to 
 \begin{figure}[h!]
     \centering
     \IncludeGraphics{4configs.png}
-    \caption{\label{fig:GdMn2O5_spin_configs}{\bf Magnetic configurations at $\phi_H =  10^\circ$.} The configurations corresponding to the four states are labeled by the numbers in the top left corner of each panel. Gd ions are displayed in green, Mn in purple. The cyan lines highlight the orientation of the chains. A Mn ion of chain $L_1$ and neighboring Gd ion are highlighted by the red ellipse to demonstrate the 360$^\circ$ rotation in 90$^\circ$ increments.  }
+    \caption{\label{fig:GdMn2O5_spin_configs}{\bf Magnetic configurations at $\phi_H =  10^\circ$.} The configurations corresponding to the four-states are labeled by the numbers in the top left corner of each panel. Gd ions are displayed in green, Mn in purple. The cyan lines highlight the orientation of the chains. A Mn ion of chain $L_1$ and neighboring Gd ion are highlighted by the red ellipse to demonstrate the 360$^\circ$ rotation in 90$^\circ$ increments.  }
     \label{fig:GdMn2O5_4configs}
 \end{figure}
 Now that we have a firm grasp on the energetics of the problem, we turn to an investigation of the behavior of the spins that results from it.
 Again, we focus first on the most interesting situation of the magic angle regime at $\phi_H=10^\circ$.
-The magnetic configurations for the four states that are sequentially visited are shown in Fig.~\ref{fig:GdMn2O5_4configs}.
+The magnetic configurations for the four-states that are sequentially visited are shown in Fig.~\ref{fig:GdMn2O5_4configs}.
 In the low field states 1 and 3, Mn spins align closely with the anisotropy axes of the two chains.
 The Gd spins (green) align in largely antiferromagnetically with the closest Mn ion (purple) of the chain that they are most strongly coupled to ($v_1$ in Fig.~\ref{fig:GdMn2O5_unit_cell}(a)).
 This causes a roughly left--left--right--right sequence of the Gd spins along the $a$-axis at low field. 
@@ -501,7 +501,7 @@ The higher the strength of the applied field, the more will the Gd spins align w
 \\\\
 As could already be deduced from our earlier discussion on the trajectory through the ($\phi_{L_1}$, $\phi_{L_2}$) space (Fig.~\ref{fig:GdMn2O5_heatmap}), we can observe that the spins associated with $\bm L_1$ perform a unidirectional rotation during the up--down field sweeps.
 The Gd spins that are coupled strongest to this chain perform a similar rotational motion, but with less well-defined increments.
-% The spins of the other chain, $\bm L_2$ seem to only toggle between two states, and a similar behavior can be observed for the Gd spins coupled most strongly to it.
+% The spins of the other chain, $\bm L_2$ seem to only toggle between two-states, and a similar behavior can be observed for the Gd spins coupled most strongly to it.
 Indeed, focusing on the highlighted spins in Fig.~\ref{fig:GdMn2O5_4configs}, we see that the chains rotate with increments of around 90$^\circ$ between the states, performing a full 360$^\circ$ rotation by the time they arrive back at the original configuration.
 \begin{figure}
 	\IncludeGraphics{spin_configs}
@@ -523,8 +523,8 @@ Notice how all field cycling procedures depicted in panel (a) lead to the same s
 Since the ferroelectric polarization $P_b$ is a direct result of the magnetic configuration, we briefly comment on how these different switching behaviors for the spin are translated in to the plots of the polarization in Fig.~\ref{fig:GdMn2O5_theory} and Fig.~\ref{fig:GdMn2O5_experiment1}.
 Most of the evolution of $P_b$ can be understood from the $\bm L_1 \cdot \bm L_2$ part. The contribution arising from the Gd--Mn exchange striction behaves similarly due to strong coupling between them ($v_1$), with an additional superposed contribution due to the slight rotations that the Gd spins perform away from the switching field strength $|H| \sim 5$ T.
 At $\phi_{\rm H} = \pm 20^\circ$, both N\'eel vectors $\bm L_\alpha$ toggle between two directions in such a way that the angle between them and, hence, the ferroelectric polarization changes very little (Figs.~\ref{fig:GdMn2O5_regimes}(b,f),~\ref{fig:GdMn2O5_experiment1}(c), and~\ref{fig:GdMn2O5_theory}(c)). 
-On the other hand, at $\phi_{H}=0^\circ$, $\bm{L}_1$ and  $\bm{L}_2$ tilt in opposite directions. The resulting large variation of the angle between these two vectors gives rise to the two state switching with the polarization reversal (Figs.~\ref{fig:GdMn2O5_regimes}(d),~\ref{fig:GdMn2O5_experiment1}(a), and ~\ref{fig:GdMn2O5_theory}(a)). This suggests that the small-amplitude relative rotation of $\bm{L}_1$ and $\bm{L}_2$ is an electromagnon mode that could be excited by oscillating $H_a$ or $E_b$.
-On the boundary between the two extremes one of the $\bm L_\alpha$ toggles while the other performs the full 360$^\circ$ rotation, leading to the four state polarization loops.
+On the other hand, at $\phi_{H}=0^\circ$, $\bm{L}_1$ and  $\bm{L}_2$ tilt in opposite directions. The resulting large variation of the angle between these two vectors gives rise to the two-state switching with the polarization reversal (Figs.~\ref{fig:GdMn2O5_regimes}(d),~\ref{fig:GdMn2O5_experiment1}(a), and ~\ref{fig:GdMn2O5_theory}(a)). This suggests that the small-amplitude relative rotation of $\bm{L}_1$ and $\bm{L}_2$ is an electromagnon mode that could be excited by oscillating $H_a$ or $E_b$.
+On the boundary between the two extremes one of the $\bm L_\alpha$ toggles while the other performs the full 360$^\circ$ rotation, leading to the four-state polarization loops.
 %
 %
 \subsection{Topology \label{sec:GdMn2O5_topology}}
@@ -534,28 +534,28 @@ We will sharpen our previous statements in this Section and comment on the gener
 Comparing the trajectories (white lines in Fig.~\ref{fig:GdMn2O5_trajectories} and Fig.~\ref{fig:GdMn2O5_heatmap}) that describe the field evolution of the state of the system, we see that it is confined to one of the vertical valleys, as discussed previously.
 This is the case for all possible switching regimes. When $\phi_H = +10^\circ$, $\phi_{L_1}$ varies strongest, whereas for $\phi_H = -10^\circ$, $\phi_{L_2}$ varies the most, while in both cases the system as a whole remains inside the valley that hosts the original state.
 
-In the two state regimes (Fig.~\ref{fig:GdMn2O5_trajectories}(a, c)), the system remains in the neighborhood of the starting point, with the trajectory contractible to a single point, whereas in the four state regime in Fig.~\ref{fig:GdMn2O5_trajectories}(b), the system progresses through the entire valley in a unidirectional sense, connecting the top and bottom edges while $\bm{L}_1$ rotates a full $360^\circ$.
-In the latter case, the path can not be fully contracted to a single point, which highlights its {\em  topologically distinct} nature compared to the two state switching regimes.
+In the two-state regimes (Fig.~\ref{fig:GdMn2O5_trajectories}(a, c)), the system remains in the neighborhood of the starting point, with the trajectory contractible to a single point, whereas in the four-state regime in Fig.~\ref{fig:GdMn2O5_trajectories}(b), the system progresses through the entire valley in a unidirectional sense, connecting the top and bottom edges while $\bm{L}_1$ rotates a full $360^\circ$.
+In the latter case, the path can not be fully contracted to a single point, which highlights its {\em  topologically distinct} nature compared to the two-state switching regimes.
 Indeed, in the $(\phi_{\rm L1},\phi_{\rm L2})$-space with a torus topology, we can assign a winding number $Q$ to such trajectories, defined as:
 \begin{equation}
 Q=\frac{1}{2\pi}\int_0^{t_0} dt (L_1^x\partial_t L_1^y - L_1^y \partial_t L_1^x) - (L_2^x\partial_t L_2^y - L_2^y \partial_t L_2^x),
 \end{equation}
 where the integral is taken over the time interval, $t_0$, during which the magnetic field is ramped up and down twice and the system is returned to its initial state.
-In the two state switching regimes, $Q  = 0$, whereas for the four state switching we find $Q = 1$.
-This means that as long as the low and high angle regimes are present in a material (Fig~\ref{fig:GdMn2O5_trajectories} (a,c)), there will always exist a boundary region near the magic angle that interpolates between the two (Fig~\ref{fig:GdMn2O5_trajectories}(b)), leading to the circular four state magnetoelectric switching loop.
+In the two-state switching regimes, $Q  = 0$, whereas for the four-state switching we find $Q = 1$.
+This means that as long as the low and high angle regimes are present in a material (Fig~\ref{fig:GdMn2O5_trajectories} (a,c)), there will always exist a boundary region near the magic angle that interpolates between the two (Fig~\ref{fig:GdMn2O5_trajectories}(b)), leading to the circular four-state magnetoelectric switching loop.
 \\\\
 We finish this Section by demonstrating the generality of this behavior that results from its topological nature.
 
-The size and position of the $\phi_H$ interval for which the four state regime appears, depends on the details of the model parameters, but similarly to other topological boundaries (e.g. magnetic domain walls, topologically protected edge states in topological insulators), it can not be destroyed when the neighboring ``domains'' are present (high and low angle switching regimes in this case).
+The size and position of the $\phi_H$ interval for which the four-state regime appears, depends on the details of the model parameters, but similarly to other topological boundaries (e.g. magnetic domain walls, topologically protected edge states in topological insulators), it can not be destroyed when the neighboring ``domains'' are present (high and low angle switching regimes in this case).
 The influence of varying a single model parameter is demonstrated in Fig.~\ref{fig:GdMn2O5_windingvsparam}, where the blue and red regions correspond to the angles $\phi_H$ where the low and high angle regimes appear, respectively.
-Indeed, we see that for many parameters the four state region (displayed in grey) exists as the boundary between the regions of the two state regimes.
-One can also observe that the influence of some parameters is greater than others. For instance, taking $v_1=0.7$ meV dramatically increases the width of the four state switching region to the interval [5.2$^\circ$, 17.6$^\circ$] for $\phi_H$.
-However, even for very high values of $v_1$ does the four state switching appear.
+Indeed, we see that for many parameters the four-state region (displayed in grey) exists as the boundary between the regions of the two-state regimes.
+One can also observe that the influence of some parameters is greater than others. For instance, taking $v_1=0.7$ meV dramatically increases the width of the four-state switching region to the interval [5.2$^\circ$, 17.6$^\circ$] for $\phi_H$.
+However, even for very high values of $v_1$ does the four-state switching appear.
 A small variation to $K_L$, the strength of the Mn single-ion anisotropy, on the other hand, leads to a significant change to the characteristics of the topologically protected region.
 This is not surprising, since the behavior of the Mn chains is very similar to that of the usual spin-flop transition, which crucially depends on the easy-axis anisotropy. This latter point will be expanded upon in the next Section.
 \begin{figure}
 	\IncludeGraphics{winding_modelparam.png}
-	\caption{\label{fig:GdMn2O5_windingvsparam} {\bf Magic Angle region.} The panels demonstrate the influence of selected model parameters on the magic angle region. In each panel only the parameter labeled on the vertical axis is varied, whereas the others are kept at the values reported in the Methods Section \ref{sec:GdMn2O5_methods}. All parameters are reported in units of meV. The blue and red regions denote the angles $\phi_H$ for which the low angle and high angle two state switching regimes appear, respectively. The grey boundary region is where the magic angle four state switching occurs, characterized by a winding number of 1, and is topologically protected by the neighboring regimes.}
+	\caption{\label{fig:GdMn2O5_windingvsparam} {\bf Magic Angle region.} The panels demonstrate the influence of selected model parameters on the magic angle region. In each panel only the parameter labeled on the vertical axis is varied, whereas the others are kept at the values reported in the Methods Section \ref{sec:GdMn2O5_methods}. All parameters are reported in units of meV. The blue and red regions denote the angles $\phi_H$ for which the low angle and high angle two-state switching regimes appear, respectively. The grey boundary region is where the magic angle four-state switching occurs, characterized by a winding number of 1, and is topologically protected by the neighboring regimes.}
 \end{figure}
 \\\\
 We have so far given a detailed description of the observed behavior, experimentally and from the simulations of our effective model.
@@ -600,7 +600,7 @@ We hope that this intuitive picture shines some light on what might be happening
 \section{Simplified Model}
 Having modeled the topologically protected switching in  GdMn$_2$O$_5$ with all its complexity, one may wonder what the minimal requirements are to have a similar behavior where the spins rotate 360$^\circ$ while the applied field only oscillates along a single axis.
 It is clear from the spin configurations in Fig.~\ref{fig:GdMn2O5_spin_configs}, and from previous considerations, that the chain with Mn moments most parallel to the applied field does the full rotation, while the other chain merely toggles around its starting orientation. As mentioned before, the Gd spins mostly follow the behavior of the chain they are most strongly coupled to. This warrants an attempt to reproduce the behavior of the rotating spins using only a single Mn chain with the Gd spins that are coupled to it via $v_1$. 
-In the particular case where the magic angle is along $\phi_H = +10^\circ$, we therefore keep $L_1$, $S_2$, $S_3$, $S_6$ and $S_7$ as the remaining variables in the model (see Fig.~\ref{fig:GdMn2O5_simplified_model}).
+In the particular case where the magic angle is along $\phi_H = +10^\circ$, we therefore keep $L_1$, $S_2$, $S_3$, $S_6$ and $S_7$ as the remaining variables in the model (see Fig.~\ref{fig:GdMn2O5_simple_model}).
 Furthermore, we neglect the easy axis anisotropy of Gd spins because of its small contribution due to the isotropic environment of the Gd spins.
 This leaves us with the following Hamiltonian, combining two parts, one with the dipolar terms $H_{dip}$ and another with all the other terms, $H'$:
 \begin{align}
@@ -638,24 +638,24 @@ Based on the incredible experimental observations performed by our collaborators
 Not only was this attempt very succesful in mimicking the experimental observations, it also allowed us to gain a deeper insight into what causes the effect.
 \\\\
 We identified three separate polarization switching regimes that occur for different values of the angle $\phi_H$ that the applied magnetic field makes with the $a$-axis of the crystal.
-Accordingly, we termed these the low angle, high angle, and magic angle switching regimes, the latter fully deserving its designation due to the novel four state double hysteresis loop that it leads to.
+Accordingly, we termed these the low angle, high angle, and magic angle switching regimes, the latter fully deserving its designation due to the novel four-state double hysteresis loop that it leads to.
 The magnetoelectric switching is fully deterministic in each regime, hinting at the energetics as the source for this behavior.
 Using a semi-classical effective spin Hamiltonian in terms of the Gd spins, and the AFM order parameters $\bm L_\alpha$ that describe the Mn chains, we were able to unravel the characteristics of the system.
 This physics is a prime example of the often recurring theme in condensed matter, where a combination of relatively simple terms in the Hamiltonian can lead to very interesting and unexpected emergent phenomena.
 \\\\
-Since the four state switching regime at the magic angle is the most novel, we focused much of our effort on understanding its underlying mechanism. Extrapolating the gained knowledge we were then able to rationalize the behavior of the low and high angle regimes as well.
+Since the four-state switching regime at the magic angle is the most novel, we focused much of our effort on understanding its underlying mechanism. Extrapolating the gained knowledge we were then able to rationalize the behavior of the low and high angle regimes as well.
 
-Focusing first on the evolution of the energy landscape of the model in Fig.~\ref{fig:GdMn2O5_heatmap}, we understood that the trajectory of the system through the four states is not only described by the variation of their energy minima, but that a crucial role is played by the energy barriers between them.
-We verified this by performing Nudged Elastic Band calculations that describe how the barriers between the four states evolve as a function of the applied field strength (see Fig.~\ref{fig:GdMn2O5_neb}), fully uncovering the mechanism behind the unidirectional trajectory through the energy landscape.
+Focusing first on the evolution of the energy landscape of the model in Fig.~\ref{fig:GdMn2O5_heatmap}, we understood that the trajectory of the system through the four-states is not only described by the variation of their energy minima, but that a crucial role is played by the energy barriers between them.
+We verified this by performing Nudged Elastic Band calculations that describe how the barriers between the four-states evolve as a function of the applied field strength (see Fig.~\ref{fig:GdMn2O5_neb}), fully uncovering the mechanism behind the unidirectional trajectory through the energy landscape.
 The main observation is that the barriers between neighboring states are not related by symmetry and are thus allowed to evolve asymmetrically, a fact confirmed by the different magnetizations of the barrier states.
 \\\\
-We then turned our attention to the behavior of the spins associated with the effective model. Incredibly, we found that the undirectional cycling of the four state regime is reflected in the full 360$^\circ$ rotation of half the spins by increments close to 90$^\circ$ (see Fig.~\ref{fig:GdMn2O5_regimes} for a summary of all switching regimes).
+We then turned our attention to the behavior of the spins associated with the effective model. Incredibly, we found that the undirectional cycling of the four-state regime is reflected in the full 360$^\circ$ rotation of half the spins by increments close to 90$^\circ$ (see Fig.~\ref{fig:GdMn2O5_regimes} for a summary of all switching regimes).
 This is a microscopic analogue to the crankshaft in a car, transforming the linear back--and--forth motion of the applied magnetic field (the piston) into circular motion of the spins (crankshaft).
 Since the polarization in these materials is a direct result of the magnetic configuration, we managed to link the uncovered spin behavior directly to the observations of the magnetoelectric switching in the experimental measurements.
 \\\\
 Moreover, by realizing how the magic angle switching regime appears as a boundary between the low and high angle regimes, and by studying the difference in their trajectories through the energy landscape, we identified the topological nature of the switching behavior.
-We then defined a topological winding number, associated with the spin rotations, which is 0 for the two state switching regimes (low and high angle), and 1 for the four state switching regime.
-In order to verify the generality and robustness of this topological behavior, we performed further simulations with varied model parameters, demonstrating the existence of the four state regime in a wide range of cases (see Fig.~\ref{fig:GdMn2O5_windingvsparam}).
+We then defined a topological winding number, associated with the spin rotations, which is 0 for the two-state switching regimes (low and high angle), and 1 for the four-state switching regime.
+In order to verify the generality and robustness of this topological behavior, we performed further simulations with varied model parameters, demonstrating the existence of the four-state regime in a wide range of cases (see Fig.~\ref{fig:GdMn2O5_windingvsparam}).
 \\\\
 Combining all our observations, we concluded by attempting an intuitive explanation of the switching from a microscopic point of view, comparing the behavior of the spins in GdMn$_2$O$_5$ to the well-known spin-flop transition.
 While our investigation explained the lion's share of the observed magnetoelectric switching behavior in GdMn$_2$O$_5$, there remain some unanswered questions, mainly concerning the influence of domains, and what leads to the smaller jumps of the polarization curves in Fig.~\ref{fig:GdMn2O5_experiment1}.
