--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -184,8 +184,8 @@ We uncover that, contrary to what is generally accepted, it is not the purely re
 
 This is followed in Chapter~\ref{ch:GdMn2O5} by a study on the very peculiar magnetoelectric switching that is observed in multiferroic GdMn$_2$O$_5$.
 Depending on the angle between the crystalline $a$ axis and an externally applied magnetic field, we uncover three distinct switching regimes for the ferroelectric polarization, one of which demonstrates a novel four-state hysteresis loop.
-Furthermore, this four-state regime displays a unidirectional 360$^\circ$ rotation of half the spins inside the material, during a double up--down sweep of the magnetic field.
-This unexpected behavior is a prime example of the additional behavior that can appear as a result of strongly coupled orders.
+We reproduce the behavior within a phenomenological model, and find that half the spins rotate a full 360$^\circ$ in 90$^\circ$ increments.
+Furthermore, we show that the trajectory of the order parameters in the four-state regime is topologically distinct from those of the two-state regimes. To the best of our knowledge this effect exemplifies the first manifestation of topology in the context of magnetoelectric switching.
 
 In Chapter~\ref{ch:CrSDW} the focus will be shifted towards the aspect of dynamical control with increased granularity, that can be achieved in systems with strongly coupled orders.
 We show that, in a thin film of elemental Chromium, an extremely precise control over a lattice vibration can be achieved through the excitations of a coupled spin density wave.
@@ -195,23 +195,23 @@ We formulate and fit a Landau model based on the experimental measurements with 
 Finally, We conclude this Thesis in Chapter~\ref{ch:Softening} by a systematic study of the implications on the mechanical properties of 180$^\circ$ ferroelectric domain walls in BaTiO$_3$, due to the interaction between strain and polarization.
 Surprisingly, these walls appear mechanically softer to a tip applied to the surface of the sample, even though they are not ferroelastic and thus do not separate domains with different strain textures.
 Based on the experimental observations and a numerical simulation, we uncover that the mechanical interaction between the tip and domain wall localized phonons explains the apparent softening.
-% \chapter*{Acknowledgements}
-% \Include{Publications}
+\chapter*{Acknowledgements}
+\Include{Publications}
 \setcounter{tocdepth}{1}
 \tableofcontents
 \mainmatter
 \Include{Introduction}
 
-% \Include{Rashba}
-% \Include{GdMn2O5}
-% \Include{Cr}
+\Include{Rashba}
+\Include{GdMn2O5}
+\Include{Cr}
 
-% \Include{Softening}
+\Include{Softening}
 \appendix
 \Include{DFT}
 \Include{Wannier}
 \Include{FEM}
 \backmatter
-% \bibliography{references}
+\bibliography{references}
 \printindex
 \end{document}
