--- a/papers/Wannier/Wannier.tex
+++ b/papers/Wannier/Wannier.tex
@@ -1,4 +1,4 @@
-\chapter{Wannier Functions \label{sec:Wannier}}
+\chapter{Wannier Functions \label{ch:Wannier}}
 % or indirectly to parametrize the magnetic exchanges between localized spins as in Chapter \ref{ch:GdMn2O5}, .
 Tight-Binding models have appeared in various forms throughout history, originally proposed by Bloch \cite{Bloch1929}, and sometimes also referred to as the {\it linear combination of atomic orbitals} method \cite{Slater1954}.
 This last description hints at how they are constructed.
